8367608: [lworld] Update/reimplement valhalla benchmarks for JEP 401